syntax = "proto3";

package tcnapi.exile.gate.v2;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "tcnapi/exile/core/v2/entities.proto";
import "tcnapi/exile/gate/v2/entities.proto";

service GateService {
  // Initial configuration retrieval for client setup
  rpc GetClientConfiguration(GetClientConfigurationRequest) returns (GetClientConfigurationResponse);

  // Organization details retrieval
  rpc GetOrganizationInfo(GetOrganizationInfoRequest) returns (GetOrganizationInfoResponse);

  // Periodic event polling (up to 4MB)
  rpc PollEvents(PollEventsRequest) returns (PollEventsResponse);

  // Job streaming connection
  rpc StreamJobs(StreamJobsRequest) returns (stream StreamJobsResponse);

  // Job results submission (max 2MB)
  rpc SubmitJobResults(SubmitJobResultsRequest) returns (SubmitJobResultsResponse);

  // Agent state management
  rpc GetAgentStatus(GetAgentStatusRequest) returns (GetAgentStatusResponse);
  rpc UpdateAgentStatus(UpdateAgentStatusRequest) returns (UpdateAgentStatusResponse);
  rpc ListAgents(ListAgentsRequest) returns (stream ListAgentsResponse);
  rpc UpsertAgent(UpsertAgentRequest) returns (UpsertAgentResponse);
  rpc GetAgentById(GetAgentByIdRequest) returns (GetAgentByIdResponse);
  rpc GetAgentByPartnerId(GetAgentByPartnerIdRequest) returns (GetAgentByPartnerIdResponse);

  // Telephony operations
  rpc Dial(DialRequest) returns (DialResponse);

  // Recording controls
  rpc StartCallRecording(StartCallRecordingRequest) returns (StartCallRecordingResponse);
  rpc StopCallRecording(StopCallRecordingRequest) returns (StopCallRecordingResponse);
  rpc GetRecordingStatus(GetRecordingStatusRequest) returns (GetRecordingStatusResponse);

  // Scrub list management
  rpc ListScrubLists(ListScrubListsRequest) returns (ListScrubListsResponse);
  rpc AddScrubListEntries(AddScrubListEntriesRequest) returns (AddScrubListEntriesResponse);
  rpc UpdateScrubListEntry(UpdateScrubListEntryRequest) returns (UpdateScrubListEntryResponse);
  rpc RemoveScrubListEntries(RemoveScrubListEntriesRequest) returns (RemoveScrubListEntriesResponse);
}

message PollEventsRequest {
  int32 event_count = 10; // Default 100 if 0
}

message PollEventsResponse {
  repeated Event events = 1;
}

message StreamJobsRequest {}

message StreamJobsResponse {
  string job_id = 1;
  oneof task {
    ListPoolsRequest list_pools = 10;
    GetPoolStatusRequest get_pool_status = 11;
    GetPoolRecordsRequest get_pool_records = 12;
    SearchRecordsRequest search_records = 13;
    GetRecordFieldsRequest get_record_fields = 14;
    SetRecordFieldsRequest set_record_fields = 15;
    CreatePaymentRequest create_payment = 16;
    PopAccountRequest pop_account = 17;
    InfoRequest info = 100;
    SeppukuRequest shutdown = 101;
    LogRequest log = 102;
  }

  message ListPoolsRequest {
    string job_id = 10;
  }

  message GetPoolStatusRequest {
    string pool_id = 2;
    string job_id = 10;
  }

  message GetPoolRecordsRequest {
    string pool_id = 2;
    string job_id = 10;
  }

  message SearchRecordsRequest {
    string aip160_filter = 2;
    string job_id = 10;
    string lookup_type = 11;
    string lookup_value = 12;
    google.protobuf.StringValue parent_id = 13;
    // TBD
  }

  message GetRecordFieldsRequest {
    string pool_id = 2;
    string record_id = 3;
    repeated string field_names = 4;
    string job_id = 10;
  }

  message SetRecordFieldsRequest {
    string pool_id = 2;
    string record_id = 3;
    repeated tcnapi.exile.core.v2.Field fields = 4;
    string job_id = 10;
  }

  message CreatePaymentRequest {
    string pool_id = 2;
    string record_id = 3;
    string payment_id = 4;
    string payment_type = 5;
    string payment_amount = 6;
    google.protobuf.Timestamp payment_date = 7;
    string job_id = 10;
  }

  message PopAccountRequest {
    string pool_id = 2;
    string record_id = 3;
    string call_sid = 4;
    string call_type = 5;
    string job_id = 10;
  }

  message SendAgentCallRequest {
    string pool_id = 2;
    string record_id = 3;
    string agent_id = 4;
    string call_sid = 5;
    string call_type = 6;
    string job_id = 10;
    // TBD
  }

  message SendTelephonyResultsRequest {
    string pool_id = 2;
    string record_id = 3;
    string call_sid = 4;
    string call_type = 5;
    string job_id = 10;
    // TBD
  }

  message SendAgentResponseRequest {
    string pool_id = 2;
    string record_id = 3;
    string agent_id = 4;
    string call_sid = 5;
    string call_type = 6;
    string job_id = 10;
    // TBD
  }

  message InfoRequest {
    string job_id = 2;
  }

  message SeppukuRequest {
    string job_id = 2;
  }

  message LogRequest {
    string job_id = 2;
  }
}

message SubmitJobResultsRequest {
  string job_id = 2;
  bool end_of_transmission = 3;

  oneof result {
    ListPoolsResult list_pool_result = 10;
    GetPoolStatusResult get_pool_status_result = 11;
    GetPoolRecordsResult get_pool_records_result = 12;
    SearchRecordResult search_record_result = 13;
    GetRecordFieldsResult get_record_fields_result = 14;
    SetRecordFieldsResult set_record_fields_result = 15;
    CreatePaymentResult create_payment_result = 16;
    PopAccountResult pop_account_result = 17;
    ErrorResult error_result = 21;
    InfoResult info_result = 22;
    SeppukuResult shutdown_result = 23;
    LogResult log_result = 24;
  }

  message ListPoolsResult {
    repeated tcnapi.exile.core.v2.Pool pools = 1;
  }
  message GetPoolStatusResult {
    tcnapi.exile.core.v2.Pool pool = 1;
  }
  message GetPoolRecordsResult {
    repeated tcnapi.exile.core.v2.Record records = 1;
  }
  message SearchRecordResult {
    repeated tcnapi.exile.core.v2.Record records = 1;
  }
  message GetRecordFieldsResult {
    repeated tcnapi.exile.core.v2.Field fields = 1;
  }
  message SetRecordFieldsResult {}
  message CreatePaymentResult {}
  message PopAccountResult {}
  message ErrorResult {
    string message = 1;
  }
  message InfoResult {}
  message SeppukuResult {}
  message LogResult {}
}

message SubmitJobResultsResponse {}

message Event {
  //   string job_id = 1;
  oneof entity {
    ExileAgentCall agent_call = 10;
    ExileTelephonyResult telephony_result = 11;
    ExileAgentResponse agent_response = 12;
  }
}

message RemoveScrubListEntriesRequest {
  string scrub_list_id = 1;
  repeated string entries = 2;
}

message RemoveScrubListEntriesResponse {}

message UpdateScrubListEntryRequest {
  string scrub_list_id = 1;
  google.protobuf.StringValue notes = 10;
  string content = 11;
  google.protobuf.Timestamp expiration = 12;
  google.protobuf.StringValue country_code = 13;
}

message UpdateScrubListEntryResponse {}

message AddScrubListEntriesRequest {
  string scrub_list_id = 1;
  repeated Entry entries = 10;
  string country_code = 11;

  message Entry {
    string content = 1;
    google.protobuf.Timestamp expiration = 2;
    google.protobuf.StringValue notes = 3;
  }
}

message AddScrubListEntriesResponse {}

message ListScrubListsRequest {}
message ListScrubListsResponse {
  repeated ScrubList scrub_lists = 1;
}

message ScrubList {
  string scrub_list_id = 1;
  bool read_only = 2;
  ContentType content_type = 3;
  enum ContentType {
    PHONE_NUMBER = 0;
    EMAIL = 1;
    SMS = 2;
    OTHER = 3;
    ACCOUNT_NUMBER = 4;
    WHATSAPP = 5;
  }
}

message GetClientConfigurationRequest {}

message GetClientConfigurationResponse {
  string org_id = 1;
  string org_name = 2;
  string config_name = 6;
  string config_payload = 7;
}

message GetOrganizationInfoRequest {}
message GetOrganizationInfoResponse {
  string org_name = 2;
}

message GetRecordingStatusRequest {
  string user_id = 1;
}

message GetRecordingStatusResponse {
  bool is_recording = 1;
}

message UpsertAgentRequest {
  string username = 1;
  string partner_agent_id = 2;
  string first_name = 3;
  string last_name = 4;
  string password = 5;
}

message UpsertAgentResponse {
  Agent agent = 1;
}

message GetAgentByPartnerIdRequest {
  string partner_agent_id = 1;
}

message GetAgentByPartnerIdResponse {
  Agent agent = 1;
}

message GetAgentByIdRequest {
  string user_id = 1;
}

message GetAgentByIdResponse {
  Agent agent = 1;
}

message StopCallRecordingRequest {
  string user_id = 1;
}
message StopCallRecordingResponse {}

message StartCallRecordingRequest {
  string user_id = 1;
}
message StartCallRecordingResponse {}

message DialRequest {
  string user_id = 1;
  string phone_number = 2;
  string caller_id = 3;
}

message DialResponse {
  string phone_number = 1;
  string caller_id = 2;
  int64 call_sid = 3;
  CallType call_type = 4;
  string org_id = 5;
  string partner_agent_id = 6;
}

message GetAgentStatusRequest {
  string user_id = 1;
}
message GetAgentStatusResponse {
  string user_id = 1;
  AgentState agent_state = 10;
  int64 current_session_id = 11;
  ConnectedParty connected_party = 12;
}

message ConnectedParty {
  int64 call_sid = 1;
  CallType call_type = 2;
  bool is_inbound = 3;
}

message UpdateAgentStatusRequest {
  string user_id = 1;
  AgentState new_state = 2;
}
message UpdateAgentStatusResponse {}

message ListAgentsRequest {}
message ListAgentsResponse {
  Agent agent = 1;
}

message Agent {
  string user_id = 1;
  string org_id = 2;
  string first_name = 3;
  string last_name = 4;
  string username = 5;
  string partner_agent_id = 6;
}
